# agent-memory-ablation

./: .gitattributes  .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
arms/: __init__.py  base.py  embeddings.py  entities.py  graph.py  hybrid.py  rag.py  vector_index.py
corpus/: __init__.py  facts.jsonl  generate.py  graph.json  manifest.json  schema.py
harness/: __init__.py  build_queries.py  metrics.py  run_eval.py  tracing.py
harness/queries/: distractor.jsonl  known_item.jsonl  manifest.json  multi_hop.jsonl
paper/: README.md  build_pdf.py  generate_figures.py  paper.tex
results/: per_query.csv  storage.csv  summary.csv  summary.json  tables.md
scripts/: run.py
tests/: conftest.py  test_arms.py  test_corpus.py  test_metrics.py  test_queries.py
traces/: README.md
traces/graph/: otlp.trace.json  spans.jsonl
traces/hybrid/: otlp.trace.json  spans.jsonl
traces/rag/: otlp.trace.json  spans.jsonl
