[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-memory-ablation"
version = "1.0.0"
description = "A controlled ablation of stateless RAG, a canonical knowledge graph, and their hybrid on a frozen synthetic corpus."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "William White", email = "sheldonwhite888@gmail.com" }]

[tool.setuptools]
packages = ["corpus", "arms", "harness", "paper"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = ["ignore::DeprecationWarning", "ignore::UserWarning"]
